deploy: 0908615a6c0171c8af5b9122d0be2963194738f2

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ Taedi's Log</a>
 <a href=/yi-teamproject-log-7/ title="팀 프로젝트 회고 - 7.Flow(주문 & 결제)" class=post-card-link>
 <div class=card>
 <div class=card-head>
-<img class=card-img-top src=/images/default-hero.svg alt="Card image cap">
+<img class=card-img-top src=/images/default-hero2.png alt="Card image cap">
 </div>
 <div class=card-body>
 <h5 class=card-title>팀 프로젝트 회고 - 7.Flow(주문 & 결제)</h5>
@@ -108,7 +108,7 @@ Taedi's Log</a>
 <a href=/yi-teamproject-log-6/ title="팀 프로젝트 회고 - 6.Flow(배송비)" class=post-card-link>
 <div class=card>
 <div class=card-head>
-<img class=card-img-top src=/images/default-hero.svg alt="Card image cap">
+<img class=card-img-top src=/images/default-hero2.png alt="Card image cap">
 </div>
 <div class=card-body>
 <h5 class=card-title>팀 프로젝트 회고 - 6.Flow(배송비)</h5>
@@ -125,7 +125,7 @@ Taedi's Log</a>
 <a href=/yi-teamproject-log-5/ title="팀 프로젝트 회고 - 5.Flow(회원가입&로그인)" class=post-card-link>
 <div class=card>
 <div class=card-head>
-<img class=card-img-top src=/images/default-hero.svg alt="Card image cap">
+<img class=card-img-top src=/images/default-hero2.png alt="Card image cap">
 </div>
 <div class=card-body>
 <h5 class=card-title>팀 프로젝트 회고 - 5.Flow(회원가입&로그인)</h5>
@@ -145,7 +145,7 @@ Taedi's Log</a>
 <a href=/yi-teamproject-log-4/ title="팀 프로젝트(쇼핑몰 제작) 회고 - 4.DB" class=post-card-link>
 <div class=card>
 <div class=card-head>
-<img class=card-img-top src=/images/default-hero.svg alt="Card image cap">
+<img class=card-img-top src=/images/default-hero2.png alt="Card image cap">
 </div>
 <div class=card-body>
 <h5 class=card-title>팀 프로젝트(쇼핑몰 제작) 회고 - 4.DB</h5>
@@ -181,7 +181,7 @@ Taedi's Log</a>
 <a href=/yi-teamproject-log-3/ title="팀 프로젝트(쇼핑몰 제작) 회고 - 3.코딩 컨벤션" class=post-card-link>
 <div class=card>
 <div class=card-head>
-<img class=card-img-top src=/images/default-hero.svg alt="Card image cap">
+<img class=card-img-top src=/images/default-hero2.png alt="Card image cap">
 </div>
 <div class=card-body>
 <h5 class=card-title>팀 프로젝트(쇼핑몰 제작) 회고 - 3.코딩 컨벤션</h5>
