--- a/yi-teamproject-log-3/index.html
+++ b/yi-teamproject-log-3/index.html
@@ -78,7 +78,7 @@ Taedi's Log</a>
 <section class=content-section id=content-section>
 <div class=content>
 <div class="container p-0 read-area">
-<div class="hero-area col-sm-12" id=hero-area style=background-image:url(https://log.taedi.net/images/default-hero.svg)>
+<div class="hero-area col-sm-12" id=hero-area style=background-image:url(https://log.taedi.net/images/default-hero2.png)>
 </div>
 <div class=page-content>
 <div class="author-profile ml-auto align-self-lg-center">
