deploy: 6d757842a7259ab7441a9ab25145d295a6b5b149

--- a/tomcat-external-deploy-maven/index.html
+++ b/tomcat-external-deploy-maven/index.html
@@ -58,13 +58,13 @@ Taedi's Log</a>
 <ul class=tree id=tree>
 <li id=list-heading><a href=/posts data-filter=all>Posts</a></li>
 <div class=subtree>
+<li><a href=/posts/blog/ title=Blog>Blog</a></li>
 <li><a class=active href=/posts/java/ title=Java>Java</a></li>
 <li><a href=/posts/javascript/ title=JavaScript>JavaScript</a></li>
 <li><a href=/posts/logs/ title=Logs>Logs</a></li>
 <li><a href=/posts/python/ title=Python>Python</a></li>
 <li><a href=/posts/server/ title=Server>Server</a></li>
 <li><a href=/posts/sql/ title=SQL>SQL</a></li>
-<li><a href=/posts/blog/ title=Blog>Blog</a></li>
 </div>
 </ul>
 </div>
@@ -278,7 +278,13 @@ usr/local/tomcat/webapps.dist/manager
 </div>
 <hr>
 <div class="row next-prev-navigator">
-<div class="col-md-12 next-article">
+<div class="col-md-6 previous-article">
+<a href=/hugo-upload/ title="Github 블로그 설정 4. 대망의 업로드" class="btn btn-outline-info">
+<div><i class="fas fa-chevron-circle-left"></i> 이전</div>
+<div class=next-prev-text>Github 블로그 설정 4. 대망의 업로드</div>
+</a>
+</div>
+<div class="col-md-6 next-article">
 <a href=/eclipse-mac-kor-fix/ title="이클립스(eclipse), Dbeaver 맥에서 한글 짤림문제 해결" class="btn btn-outline-info">
 <div>다음 <i class="fas fa-chevron-circle-right"></i></div>
 <div class=next-prev-text>이클립스(eclipse), Dbeaver 맥에서 한글 짤림문제 해결</div>
