--- a/hugo-upload/index.html
+++ b/hugo-upload/index.html
@@ -58,13 +58,13 @@ Taedi's Log</a>
 <ul class=tree id=tree>
 <li id=list-heading><a href=/posts data-filter=all>Posts</a></li>
 <div class=subtree>
+<li><a class=active href=/posts/blog/ title=Blog>Blog</a></li>
 <li><a href=/posts/java/ title=Java>Java</a></li>
 <li><a href=/posts/javascript/ title=JavaScript>JavaScript</a></li>
 <li><a href=/posts/logs/ title=Logs>Logs</a></li>
 <li><a href=/posts/python/ title=Python>Python</a></li>
 <li><a href=/posts/server/ title=Server>Server</a></li>
 <li><a href=/posts/sql/ title=SQL>SQL</a></li>
-<li><a class=active href=/posts/blog/ title=Blog>Blog</a></li>
 </div>
 </ul>
 </div>
@@ -215,6 +215,12 @@ $ git push origin source
 <a href=/notion-to-hugo-toha/ title="Github 블로그 설정 3. Notion 페이지 변환" class="btn btn-outline-info">
 <div><i class="fas fa-chevron-circle-left"></i> 이전</div>
 <div class=next-prev-text>Github 블로그 설정 3. Notion 페이지 변환</div>
+</a>
+</div>
+<div class="col-md-6 next-article">
+<a href=/tomcat-external-deploy-maven/ title="[Maven] 외부 톰캣에 deploy 설정하기" class="btn btn-outline-info">
+<div>다음 <i class="fas fa-chevron-circle-right"></i></div>
+<div class=next-prev-text>[Maven] 외부 톰캣에 deploy 설정하기</div>
 </a>
 </div>
 </div>
