--- a/tomcat-external-deploy-maven/index.html
+++ b/tomcat-external-deploy-maven/index.html
@@ -279,15 +279,15 @@ usr/local/tomcat/webapps.dist/manager
 <hr>
 <div class="row next-prev-navigator">
 <div class="col-md-6 previous-article">
-<a href=/hugo-upload/ title="Github 블로그 설정 4. 대망의 업로드" class="btn btn-outline-info">
+<a href=/hugo-install/ title="Github 블로그 설정  1. Hugo 설치" class="btn btn-outline-info">
 <div><i class="fas fa-chevron-circle-left"></i> 이전</div>
-<div class=next-prev-text>Github 블로그 설정 4. 대망의 업로드</div>
+<div class=next-prev-text>Github 블로그 설정 1. Hugo 설치</div>
 </a>
 </div>
 <div class="col-md-6 next-article">
-<a href=/eclipse-mac-kor-fix/ title="이클립스(eclipse), Dbeaver 맥에서 한글 짤림문제 해결" class="btn btn-outline-info">
+<a href=/spring-mybatis-paging/ title="Spring Mybatis 페이징 처리" class="btn btn-outline-info">
 <div>다음 <i class="fas fa-chevron-circle-right"></i></div>
-<div class=next-prev-text>이클립스(eclipse), Dbeaver 맥에서 한글 짤림문제 해결</div>
+<div class=next-prev-text>Spring Mybatis 페이징 처리</div>
 </a>
 </div>
 </div>
