--- a/eclipse-mac-kor-fix/index.html
+++ b/eclipse-mac-kor-fix/index.html
@@ -241,9 +241,9 @@ Taedi's Log</a>
 <hr>
 <div class="row next-prev-navigator">
 <div class="col-md-6 previous-article">
-<a href=/tomcat-external-deploy-maven/ title="[Maven] 외부 톰캣에 deploy 설정하기" class="btn btn-outline-info">
+<a href=/spring-mybatis-paging/ title="Spring Mybatis 페이징 처리" class="btn btn-outline-info">
 <div><i class="fas fa-chevron-circle-left"></i> 이전</div>
-<div class=next-prev-text>[Maven] 외부 톰캣에 deploy 설정하기</div>
+<div class=next-prev-text>Spring Mybatis 페이징 처리</div>
 </a>
 </div>
 <div class="col-md-6 next-article">
