--- a/tistory-blog-setting-4/index.html
+++ b/tistory-blog-setting-4/index.html
@@ -219,9 +219,9 @@ Taedi's Log</a>
 </a>
 </div>
 <div class="col-md-6 next-article">
-<a href=/hugo-setting/ title="Github 블로그 설정 2. 세부 설정" class="btn btn-outline-info">
+<a href=/notion-to-hugo-toha/ title="Github 블로그 설정 3. Notion 페이지 변환" class="btn btn-outline-info">
 <div>다음 <i class="fas fa-chevron-circle-right"></i></div>
-<div class=next-prev-text>Github 블로그 설정 2. 세부 설정</div>
+<div class=next-prev-text>Github 블로그 설정 3. Notion 페이지 변환</div>
 </a>
 </div>
 </div>
