--- a/tistory-blog-setting/index.html
+++ b/tistory-blog-setting/index.html
@@ -249,9 +249,9 @@ Authoritative answers can be found from:
 <hr>
 <div class="row next-prev-navigator">
 <div class="col-md-6 previous-article">
-<a href=/hugo-install/ title="Github 블로그 설정  1. Hugo 설치" class="btn btn-outline-info">
+<a href=/hugo-upload/ title="Github 블로그 설정 4. 대망의 업로드" class="btn btn-outline-info">
 <div><i class="fas fa-chevron-circle-left"></i> 이전</div>
-<div class=next-prev-text>Github 블로그 설정 1. Hugo 설치</div>
+<div class=next-prev-text>Github 블로그 설정 4. 대망의 업로드</div>
 </a>
 </div>
 <div class="col-md-6 next-article">
