deploy: 09167ae28c88a05c456cfb0f33498401fe579554

--- a/yi-teamproject-log-1/index.html
+++ b/yi-teamproject-log-1/index.html
@@ -201,9 +201,9 @@ Taedi's Log</a>
 </a>
 </div>
 <div class="col-md-6 next-article">
-<a href=/yi-teamproject-log-2/ title="팀 프로젝트(쇼핑몰 제작) 회고 - 2.페이지 구상" class="btn btn-outline-info">
+<a href=/yi-teamproject-log-2/ title="팀 프로젝트 회고 - 2.페이지 구상" class="btn btn-outline-info">
 <div>다음 <i class="fas fa-chevron-circle-right"></i></div>
-<div class=next-prev-text>팀 프로젝트(쇼핑몰 제작) 회고 - 2.페이지 구상</div>
+<div class=next-prev-text>팀 프로젝트 회고 - 2.페이지 구상</div>
 </a>
 </div>
 </div>
