--- a/yi-teamproject-log-5/index.html
+++ b/yi-teamproject-log-5/index.html
@@ -125,9 +125,9 @@ example.com/confirm-email/2%2dfe23fde234fde</p>
 <hr>
 <div class="row next-prev-navigator">
 <div class="col-md-6 previous-article">
-<a href=/yi-teamproject-log-4/ title="팀 프로젝트(쇼핑몰 제작) 회고 - 4.DB" class="btn btn-outline-info">
+<a href=/yi-teamproject-log-4/ title="팀 프로젝트 회고 - 4.DB" class="btn btn-outline-info">
 <div><i class="fas fa-chevron-circle-left"></i> 이전</div>
-<div class=next-prev-text>팀 프로젝트(쇼핑몰 제작) 회고 - 4.DB</div>
+<div class=next-prev-text>팀 프로젝트 회고 - 4.DB</div>
 </a>
 </div>
 <div class="col-md-6 next-article">
