--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ Taedi's Log</a>
 <a href=/spring-mybatis-paging/ title="Spring Mybatis 페이징 처리" class=post-card-link>
 <div class=card>
 <div class=card-head>
-<img class=card-img-top src=/images/default-hero2.png alt="Card image cap">
+<img class=card-img-top src=/images/hero/java.png alt="Card image cap">
 </div>
 <div class=card-body>
 <h5 class=card-title>Spring Mybatis 페이징 처리</h5>
