--- a/yi-teamproject-log-6/index.html
+++ b/yi-teamproject-log-6/index.html
@@ -207,8 +207,12 @@ ex) 상품 A 10,000원 + 상품 B 15,000원 + 발송 운임 2,500원 = 합 27,50
 <div class="col-md-4 col-sm-12">
 <h5>Contact</h5>
 <ul>
-<li><span>Email: </span> <a href=mailto:taedi90@gmail.com><span>taedi90@gmail.com</span></a></li>
-<li><span>Github: </span> <a href=https://github.com/taedi90><span>https://github.com/taedi90</span></a></li>
+<li><a href=mailto:taedi90@gmail.com target=_blank rel=noopener>
+<span><i class="fas fa-envelope"></i></span> <span>taedi90@gmail.com</span>
+</a></li>
+<li><a href=https://github.com/taedi90 target=_blank rel=noopener>
+<span><i class="fab fa-github"></i></span> <span>taedi90</span>
+</a></li>
 </ul>
 </div>
 </div>
