deploy: 0d70795a0fa44de2c2a17e868fd0e80d2c13259a

--- a/hugo-upload/index.html
+++ b/hugo-upload/index.html
@@ -211,7 +211,13 @@ $ git push origin source
 </div>
 <hr>
 <div class="row next-prev-navigator">
-<div class="col-md-12 next-article">
+<div class="col-md-6 previous-article">
+<a href=/notion-to-hugo-toha/ title="Github 블로그 설정 3. Notion 페이지 변환" class="btn btn-outline-info">
+<div><i class="fas fa-chevron-circle-left"></i> 이전</div>
+<div class=next-prev-text>Github 블로그 설정 3. Notion 페이지 변환</div>
+</a>
+</div>
+<div class="col-md-6 next-article">
 <a href=/tistory-blog-setting/ title="티스토리 개인 도메인 구매 및 활용하기 - #1 구매동기, DNS설정, 오류해결" class="btn btn-outline-info">
 <div>다음 <i class="fas fa-chevron-circle-right"></i></div>
 <div class=next-prev-text>티스토리 개인 도메인 구매 및 활용하기 - #1 구매동기, DNS설정, 오류해결</div>
