--- a/notion-to-hugo-toha/index.html
+++ b/notion-to-hugo-toha/index.html
@@ -230,15 +230,15 @@ path <span style=color:#f92672>=</span> path <span style=color:#f92672>+</span> 
 <hr>
 <div class="row next-prev-navigator">
 <div class="col-md-6 previous-article">
-<a href=/tistory-blog-setting-4/ title="기존 주소 방문 시 리다이렉트 하기 - 티스토리 2차 도메인 설정 #3" class="btn btn-outline-info">
+<a href=/hugo-setting/ title="Github 블로그 설정 2. 세부 설정" class="btn btn-outline-info">
 <div><i class="fas fa-chevron-circle-left"></i> 이전</div>
-<div class=next-prev-text>기존 주소 방문 시 리다이렉트 하기 - 티스토리 2차 도메인 설정 #3</div>
+<div class=next-prev-text>Github 블로그 설정 2. 세부 설정</div>
 </a>
 </div>
 <div class="col-md-6 next-article">
-<a href=/hugo-setting/ title="Github 블로그 설정 2. 세부 설정" class="btn btn-outline-info">
+<a href=/hugo-upload/ title="Github 블로그 설정 4. 대망의 업로드" class="btn btn-outline-info">
 <div>다음 <i class="fas fa-chevron-circle-right"></i></div>
-<div class=next-prev-text>Github 블로그 설정 2. 세부 설정</div>
+<div class=next-prev-text>Github 블로그 설정 4. 대망의 업로드</div>
 </a>
 </div>
 </div>
